syntax = "proto3";

package dappradar.defi.providers;

service DefiProviders {
  rpc GetTvl (GetTvlRequest) returns (GetTvlReply);
  rpc GetPoolAndTokenVolumes (GetPoolAndTokenVolumesRequest) returns (GetPoolAndTokenVolumesReply);
  rpc GetTokenDetails (GetTokenDetailsRequest) returns (GetTokenDetailsReply);
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckReply);
}

message HealthCheckRequest {
}

message HealthCheckReply {
  bool run = 1;
}

message GetTokenDetailsRequest {
  string provider = 1;
  string chain = 2;
}

message GetTokenDetailsReply {
  string address = 1;
  string name = 2;
  string symbol = 3;
  uint32 decimals = 4;
  string logo = 5;
}

message GetTvlRequest {
  string provider = 1;
  string chain = 2;
  GetTvlQuery query = 3;
}

message GetTvlQuery {
  string block = 1;
  string date = 2;
}

message GetTvlReply {
  map<string, string> balances = 1;
  map<string, PoolBalance> poolBalances = 2;
}

message PoolBalance {
  repeated string tokens = 1;
  repeated string balances = 2;
}


message GetPoolAndTokenVolumesRequest {
  string provider = 1;
  string chain = 2;
  GetPoolAndTokenVolumesQuery query = 3;
}

message GetPoolAndTokenVolumesQuery {
  string block = 1;
  repeated string pools = 2;
  repeated string tokens = 3;
}

message GetPoolAndTokenVolumesReply {
  map<string, PoolVolume> poolVolumes = 1;
  map<string, TokenVolume> tokenVolumes = 2;
}

message PoolVolume {
  repeated string volumes = 1;
  string volumeUsd = 2;
}

message TokenVolume {
  string volume = 1;
  string volumeUsd = 2;
}